[package]
name = "wasm-service"
version = "0.3.0"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["wasm","cloudflare","workers","worker","http"]
description = "Simplify implementation of serverless WASM on Cloudflare Workers"
repository = "https://github.com/stevelr/wasm-service"
homepage = "https://github.com/stevelr/wasm-service"
documentation = "https://docs.rs/wasm-service"
readme = "README.md"
categories = ["web-programming::http-server","wasm","asynchronous"]

[features]
# "std": use the std allocator; "alloc": you provide an allocator
default=["alloc"]
std = ["serde_json/std", "serde/std", "service-logging/std"]
alloc = ["serde_json/alloc", "serde/alloc", "service-logging/alloc"]

[dependencies]
async-trait = "0.1"
bytes = "0.5" 
js-sys = "0.3"
reqwest = { version="^0.10.9", features=["json"] }
url = "2.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# optional
serde_json = { version="1.0", default-features=false, optional=true }
serde = { version="1.0", optional=true, features=["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.service-logging]
version = "0.4"
path = "../service-logging"
optional = true
default-features = false

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
]
